# transcriber

./: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
.github/workflows/: publish.yaml
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  main.rs  model.rs
src/lib/: Uploader.svelte
src/lib/components/: Book.svelte
src/lib/v2/: Library.svelte  Reader.svelte
src/ts/: data.ts  models.ts
